--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'dev.nextftc:hardware:1.0.0' // If you would like to use the hardware module
     implementation 'dev.nextftc:control:1.0.0'
     implementation 'dev.nextftc:bindings:1.0.1'
+    implementation 'dev.nextftc.extensions:pedro:1.0.0'
 }
