--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -18,6 +18,10 @@ apply from: '../build.dependencies.gradle'
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
 
+    compileSdk 34
+    defaultConfig {
+        minSdk 24
+    }
     packagingOptions {
         jniLibs.useLegacyPackaging true
     }
@@ -30,4 +34,6 @@ dependencies {
     implementation 'dev.nextftc:control:1.0.0'
     implementation 'dev.nextftc:bindings:1.0.1'
     implementation 'dev.nextftc.extensions:pedro:1.0.0'
+    implementation "com.bylazar:fullpanels"
+
 }
